# dotfiles

./: .editorconfig  .gitignore  .gitmodules  QtProject.conf  README.md  Session-nix.vim  Session-nvim.vim  Trolltech.conf  chromium-flags.conf  code.nix  default.nix  ds4drv.conf  flake.nix  fonts.conf  gsettings.zsh  hyfetch.json  pkglist.zsh  pylintrc  rename_workspace.py  spectaclerc  switch_named_workspace.py  yuki-base.kwinrule  yuki-modified.kdebugsettingsrules  zprofile_macos
Code/: Preferences
Google Play Music Desktop Player/: Preferences  QuotaManager  SS  SingletonLock
SweetScape/: 010 Editor.ini
Thunar/: accels.scm  uca.xml
X11/: XCompose  Xresources  default.XCompose
age/: yk5c.id
alacritty/: alacritty.toml  alacritty.yml  futaba.toml  futaba.yml
bash/: bashrc  colors.bash
bless/: preferences.xml
bottom/: bottom.toml
chromium/: Certificate Revocation Lists  Local State  Safe Browsing Channel IDs  SingletonLock  SingletonSocket
coc/: commands  db.json
dconf/: user
discord/: Preferences  queued_analytics_events.json  settings.json
environment.d/: mozilla.conf  path.conf  pythonpath.conf  tmux.conf  xdg.conf
gh/: hosts.yml
git/: config  ignore
gnupg/: gpg-agent.conf  pubring.kbx  pubring.kbx~  trustdb.gpg
grc/: conf.lsusb
gtk-2.0/: gtkfilechooser.ini
htop/: alt.htoprc  htoprc
i3/: config
iterm2/: com.googlecode.iterm2.plist
jj/: config.toml
mako/: config
misc/: homebrew-keep-output.patch
mpv/: mpv.conf
neofetch/: config.conf
nix/: repl-overlay.nix
nixos/: common.nix  container-dataovermind.nix  darwin-activate-applications.zsh  darwin.nix  dev.nix  futaba-hardware.nix  futaba.nix  infra.nix  inputs.nix  keyboard-config.patch  keyleth.nix  kill-wrappers-overlay.nix  linux-gui.nix  linux.nix  lumar.nix  maho.nix  make-overlay.nix  make-scope.nix  minimal.nix  mount-shizue.nix  per-system.nix  qlib.nix  resources.nix  sodachi.nix  unpack-source.nix  virt.nix  xil-config.nix  yuki-disko.nix  yuki-hardware.nix  yuki.nix
nixos/templates/python/: .editorconfig  default.nix  flake.nix  package.nix  pyproject.toml  shell.nix
nvim/: coc-settings.json  common.lua  core.vim  lsp.lua  (+10 more)
scripts/recent/: Cargo.toml
scripts/recent/src/: main.rs
scripts/volume/: Cargo.toml
scripts/volume/src/: main.rs
(+1077 files in other folders)
