[package]
name = "recent"
version = "0.1.0"
authors = ["Mikaela Szekely <mikaela.szekely@qyriad.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
glib = "0.10.3"
gtk = "0.9.2"


[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "std"]

[profile.release]
lto = true
