[project]
name = "PKGNAME"
version = "0.1.0"
#description = ""
readme = "README.md"
authors = [
	{ name = "Qyriad", email = "qyriad@qyriad.me" },
]
#requires-python = ""
dependencies = [
	"beartype",
	"pydantic",
	"loguru",
]

[project.urls]
Homepage = "https://github.com/Qyriad/PKGNAME"
Repository = "https://github.com/Qyriad/PKGNAME"

[project.scripts]
PKGNAME = "PKGNAME:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

#[project.optional-dependencies]
#dev = ["argparse-manpage>=4.6"]

[tool.pyright]
# Not *everything* needs to be perfectly type checked.
reportAny = false
reportExplicitAny = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportMissingTypeArgument = false
